--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -1,5 +1,4 @@
 .CustomeLayout {
-  margin-top: 20px;
   background-color: #f2f2f2;
 }
 
